# actix-web-playground

./: .awsrc  .gitignore  README.md  docker-compose.yaml  garage.toml  run.sh  run_s3.sh
client/: Cargo.toml  cert.pem  certificate.p12  key.pem
client/src/: main.rs
client/static/: images.html  index.html  login.html  logout.html  orders.html  signup.html
client/static/assets/js/: logout.js  main.js  orders.js
client/static/ws/: index.html
common/: .env  Cargo.toml  build.rs  common.ts
common/proto/: image.proto  inventory.proto
common/src/: lib.rs
common/src/inventory/: image_service.rs  inventory.rs
gateway/: .env  Cargo.toml  cert.pem  key.pem
gateway/migrations/: 20240927182801_create_users_table.sql  20240927202023_seed_test_user.sql  20240927214218_add_orders.sql  20240928162815_notify_from_pg.sql  20240929213741_drop_content.sql  20240929221642_add_product_id.sql  20240929222606_assign_product_id.sql  20240929223004_remove_content_from_watcher_fn.sql  20240929223512_dset_prod_id_not_null.sql
gateway/src/: main.rs  restock_client.rs
image/: Cargo.toml
image/src/: main.rs
infos/: .env  Cargo.toml
infos/src/: server.rs
inventory/: .env  Cargo.toml
inventory/migrations/: 20240929222116_add_product_stock.sql  20240929222329_seed_product.sql
inventory/src/: client.rs  server.rs
restock/: Cargo.toml
