[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.3"
rustls = "0.23.13"
rustls-pemfile = "2.1.3"
tonic = "0.12.3"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
serde = { version = "1.0.210", features = ["derive", "serde_derive"] }
sqlx = "0.8.2"
typeshare = "1.0.3"

[build-dependencies]
dotenv = "0.15.0"
tonic-build = "0.12.3"
serde = { version = "1.0.210", features = ["serde_derive"] }
