[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = { version = "4.9.0", features = ["rustls-0_23"] }
serde = { version = "1.0.210", features = ["serde_derive"] }
common = { path = "../common/"}
env_logger = "0.11.5"
log = "0.4.22"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
jsonwebtoken = "9.3.0"
sqlx = { version = "0.8.2", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
bcrypt = "0.15.1"
