[package]
name = "image"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
aws-config = "1.5.8"
aws-sdk-dynamodb = "1.49.0"
aws-sdk-s3 = "1.54.0"
clap = {version="4.5.20",features=["derive"]}
rust-s3 = "0.35.1"

tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

openssl = { version = "0.10", features = ["vendored"] }
#    aws-config = { version = "1.1", features = ["behavior-version-latest"] }
# aws-sdk-s3 = "1.20"
axum = { version = "0.7", features = ["http2"] }
envious = "0.2"
# image = "0.25"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "serde_json", "tokio-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.4"
tower-http = { version = "0.5", features = ["compression-gzip"] }
snafu = "0.8"
futures = "0.3.31"
tonic = { version = "0.12.3", features = ["transport"] }

common = { path = "../common/" }
