[package]
name = "infos"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "infos-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "infos-client"
path = "src/client.rs"

[dependencies]
tonic = "0.12.3"
prost = "0.13.3"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
jsonwebtoken = "9.3.0"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
serde = "1.0.210"
dotenv = "0.15.0"
sqlx = { version = "0.8.2", default-features = false, features = [
    "runtime-tokio",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }

[build-dependencies]
tonic-build = "0.12.3"
